@@ -67,6 +67,8 @@ BootloaderHandleMessageResponse handle_message(const void *message, void *respon
 		case FID_GET_BUTTON_STATE: return get_button_state(message, response);
 		case FID_GET_ALL_DATA_1: return get_all_data_1(message, response);
 		case FID_FACTORY_RESET: return factory_reset(message);
+		case FID_SET_BOOST_MODE: return set_boost_mode(message);
+		case FID_GET_BOOST_MODE: return get_boost_mode(message, response);
 		default: return HANDLE_MESSAGE_RESPONSE_NOT_SUPPORTED;
 	}
 }
@@ -482,12 +484,14 @@ BootloaderHandleMessageResponse get_all_data_1(const GetAllData1 *data, GetAllDa
 	get_low_level_state(NULL, (GetLowLevelState_Response*)&parts);
 	memcpy(&response->led_state, parts.data, sizeof(GetLowLevelState_Response) - sizeof(TFPMessageHeader));
 
-
 	get_indicator_led(NULL, (GetIndicatorLED_Response*)&parts);
 	memcpy(&response->indication, parts.data, sizeof(GetIndicatorLED_Response) - sizeof(TFPMessageHeader));
 
 	get_button_state(NULL, (GetButtonState_Response*)&parts);
 	memcpy(&response->button_press_time, parts.data, sizeof(GetButtonState_Response) - sizeof(TFPMessageHeader));
+
+	get_boost_mode(NULL, (GetBoostMode_Response*)&parts);
+	memcpy(&response->boost_mode_enabled, parts.data, sizeof(GetBoostMode_Response) - sizeof(TFPMessageHeader));
 
 	return HANDLE_MESSAGE_RESPONSE_NEW_MESSAGE;
 }
@@ -499,6 +503,20 @@ BootloaderHandleMessageResponse factory_reset(const FactoryReset *data) {
 	}
 
 	return HANDLE_MESSAGE_RESPONSE_INVALID_PARAMETER;
+}
+
+BootloaderHandleMessageResponse set_boost_mode(const SetBoostMode *data) {
+	evse.boost_mode_enabled = data->boost_mode_enabled;
+	evse_save_config();
+
+	return HANDLE_MESSAGE_RESPONSE_EMPTY;
+}
+
+BootloaderHandleMessageResponse get_boost_mode(const GetBoostMode *data, GetBoostMode_Response *response) {
+	response->header.length      = sizeof(GetBoostMode_Response);
+	response->boost_mode_enabled = evse.boost_mode_enabled;
+
+	return HANDLE_MESSAGE_RESPONSE_NEW_MESSAGE;
 }
 
 
