@@ -31,7 +31,7 @@
 
 #define FIRMWARE_VERSION_MAJOR 2
 #define FIRMWARE_VERSION_MINOR 1
-#define FIRMWARE_VERSION_REVISION 5
+#define FIRMWARE_VERSION_REVISION 6
 
 #define SPI_FIFO_COOP_ENABLE
 
